force-app/main/default/objects/WorkOrder/fields/MSN_WorkOrder_Age__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkOrder_Age__c</fullName>
    <description>Calculates the age of the Work Order in days. If WO is closed, then use the EndDate - CreatedDate field, else use Today - CreatedDate.</description>
    <formula>IF (IsClosed,EndDate - CreatedDate,NOW() - CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the age of the Work Order in days up to the point when its completed.</inlineHelpText>
    <label>Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>