force-app/main/default/objects/WorkOrder/fields/MSN_WorkType_ServiceArea__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkType_ServiceArea__c</fullName>
    <description>Cross object formula field to retrieve the &quot;Service Area&quot; from the Work Type of the Work Order.</description>
    <formula>TEXT(WorkType.Service_Area__c)</formula>
    <label>Work Type Service Area</label>
    <type>Text</type>
</CustomField>