force-app/main/default/objects/WorkOrder/fields/Parts_Missing__c.field-meta.xml
<CustomField>
    <fullName>Parts_Missing__c</fullName>
    <label>Parts Missing</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Has_Parts__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Must_have_Parts__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>