force-app/main/default/objects/WorkOrder/fields/Reactive_Job_Requires_Planned_Work__c.field-meta.xml
<CustomField>
    <fullName>Reactive_Job_Requires_Planned_Work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reactive Job Requires Planned Work</label>
    <type>Checkbox</type>
</CustomField>