force-app/main/default/objects/WorkOrder/fields/Reactive_Work__c.field-meta.xml
<CustomField>
    <fullName>Reactive_Work__c</fullName>
    <formula>IF(ISPICKVAL(WorkType.MSN_TypeOfWork__c, &quot;Reactive&quot;), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reactive Work</label>
    <type>Checkbox</type>
</CustomField>