force-app/main/default/objects/WorkOrder/fields/Reinstatement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinstatement Completed</label>
    <type>Checkbox</type>
</CustomField>