force-app/main/default/objects/WorkOrder/fields/Reinstatement_Required__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reinstatement Required</label>
    <type>Checkbox</type>
</CustomField>