force-app/main/default/objects/WorkOrder/fields/Result_Code__c.field-meta.xml
<CustomField>
    <fullName>Result_Code__c</fullName>
    <formula>CASE(TEXT(Status), &apos;Completed&apos; , &apos;COMP&apos; ,&apos;Canceled&apos; ,&apos;CANCEL&apos;,&apos;Rejected&apos; ,&apos;REJECT&apos;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result Code</label>
    <type>Text</type>
</CustomField>