force-app/main/default/objects/WorkOrder/fields/Service_appointment_status__c.field-meta.xml
<CustomField>
    <fullName>Service_appointment_status__c</fullName>
    <label>Service appointment status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>