force-app/main/default/objects/WorkOrder/fields/Service_Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Number__c</fullName>
    <label>Service Request Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>