force-app/main/default/objects/WorkOrder/fields/Some_parts_not_issued__c.field-meta.xml
<CustomField>
    <fullName>Some_parts_not_issued__c</fullName>
    <formula>Insufficient_Part_Inventory_in_EAM__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Some parts not issued</label>
    <type>Checkbox</type>
</CustomField>