force-app/main/default/objects/WorkOrder/fields/Sub_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Task_Type__c</fullName>
    <label>Sub Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fulton Hogan</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Valve Audits</fullName>
            </value>
            <value>
                <fullName>Asset Replacement</fullName>
            </value>
            <value>
                <fullName>Shutdown Request</fullName>
            </value>
            <value>
                <fullName>Logger Install</fullName>
            </value>
            <value>
                <fullName>Engineer Investigation</fullName>
            </value>
            <value>
                <fullName>Project Work</fullName>
            </value>
            <value>
                <fullName>CCTV Lateral</fullName>
            </value>
            <value>
                <fullName>CCTV Sewer Main</fullName>
            </value>
            <value>
                <fullName>Desilt</fullName>
            </value>
            <value>
                <fullName>Sewer Lateral Repair</fullName>
            </value>
            <value>
                <fullName>Sewer Main Repair</fullName>
            </value>
            <value>
                <fullName>Sewer Lining</fullName>
            </value>
            <value>
                <fullName>Pumpstation Miscellaneous</fullName>
            </value>
            <value>
                <fullName>3 Man Entry</fullName>
            </value>
            <value>
                <fullName>MH REHAB</fullName>
            </value>
            <value>
                <fullName>Rootcut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>