force-app/main/default/objects/WorkOrder/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <formula>IF( ISPICKVAL(WorkType.Service_Area__c, &apos;Wastewater&apos;), &quot;Wastewater&quot;, 

IF((ISPICKVAL(WorkType.Service_Area__c, &quot;Water&quot;) &amp;&amp; ISPICKVAL( WorkType.MSN_TypeOfWork__c, &quot;Reactive&quot;)), &quot;Reactive Water&quot;, 

IF( WorkType.Name = &quot;Watermeter - Planned Replacement&quot;, &quot;Planned Meter&quot;, 

IF ((ISPICKVAL(WorkType.Service_Area__c, &quot;Water&quot;) &amp;&amp; ISPICKVAL( WorkType.MSN_TypeOfWork__c, &quot;Planned&quot;) &amp;&amp; WorkType.Name &lt;&gt; &quot;Watermeter - Planned Replacement&quot; ), &quot;Planned Water&quot;, 

IF( ISPICKVAL(WorkType.Service_Area__c, &apos;Reinstatement&apos;), &quot;Reinstatement&quot;,

&quot; &quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team</label>
    <type>Text</type>
</CustomField>