force-app/main/default/objects/WorkOrder/fields/TMP_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>TMP_Application_Number__c</fullName>
    <label>TMP Application Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>