force-app/main/default/objects/WorkOrder/fields/TMP_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>TMP_Application_Status__c</fullName>
    <label>TMP Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Extend WIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>