force-app/main/default/objects/WorkOrder/fields/TMP_Required__c.field-meta.xml
<CustomField>
    <fullName>TMP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TMP Required</label>
    <type>Checkbox</type>
</CustomField>