force-app/main/default/objects/WorkOrder/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <description>Source is ION</description>
    <label>Transaction ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>