force-app/main/default/objects/WorkOrder/fields/Travel_Start__c.field-meta.xml
<CustomField>
    <fullName>Travel_Start__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-82</description>
    <label>Travel Start</label>
    <type>DateTime</type>
</CustomField>