force-app/main/default/objects/WorkOrder/fields/Trial_Performance_Pressure_Reading__c.field-meta.xml
<CustomField>
    <fullName>Trial_Performance_Pressure_Reading__c</fullName>
    <label>Trial Performance Pressure Reading</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>