force-app/main/default/objects/WorkOrder/fields/Trial_Shutdown_Estimated_Water_Off__c.field-meta.xml
<CustomField>
    <fullName>Trial_Shutdown_Estimated_Water_Off__c</fullName>
    <label>Trial Shutdown Estimated Water Off</label>
    <type>DateTime</type>
</CustomField>