force-app/main/default/objects/WorkOrder/fields/Trial_Shutdown_Estimated_Water_On__c.field-meta.xml
<CustomField>
    <fullName>Trial_Shutdown_Estimated_Water_On__c</fullName>
    <label>Trial Shutdown Estimated Water On</label>
    <type>DateTime</type>
</CustomField>