force-app/main/default/objects/WorkOrder/fields/Variation_Number__c.field-meta.xml
<CustomField>
    <fullName>Variation_Number__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Variation Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>