force-app/main/default/objects/WorkOrder/fields/Water_On_Off__c.field-meta.xml
<CustomField>
    <fullName>Water_On_Off__c</fullName>
    <label>Water On/Off</label>
    <length>20</length>
    <type>Text</type>
</CustomField>