force-app/main/default/objects/WorkOrder/fields/Water_On_Off_Status__c.field-meta.xml
<CustomField>
    <fullName>Water_On_Off_Status__c</fullName>
    <label>Water On/Off Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>