force-app/main/default/objects/WorkOrder/fields/Water_Shutdown_Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Water_Shutdown_Application_Status__c</fullName>
    <label>Water Shutdown Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Trial Approved</fullName>
            </value>
            <value>
                <fullName>Shutdown Approved</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed without Approval</fullName>
            </value>
            <value>
                <fullName>Covid-19 On Hold</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Postponed</fullName>
            </value>
            <value>
                <fullName>Waiting Information</fullName>
            </value>
            <value>
                <fullName>Waiting Key Account Approval</fullName>
            </value>
            <value>
                <fullName>With Key Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>