force-app/main/default/objects/WorkOrder/fields/Watercare_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Watercare_Engineer__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <label>Watercare Engineer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>