force-app/main/default/objects/WorkOrder/fields/Which_streets_are_impacted__c.field-meta.xml
<CustomField>
    <fullName>Which_streets_are_impacted__c</fullName>
    <label>Which streets are impacted?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>