force-app/main/default/objects/WorkOrder/fields/WOLIs_need_review__c.field-meta.xml
<CustomField>
    <fullName>WOLIs_need_review__c</fullName>
    <label>WOLIs need review</label>
    <summaryFilterItems>
        <field>WorkOrderLineItem.Work_Type_needs_Work_Complete_Review__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>