force-app/main/default/objects/WorkOrder/fields/Work_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_No__c</fullName>
    <description>https://watercarestp.atlassian.net/browse/MSRS-93</description>
    <externalId>true</externalId>
    <label>EAM Work Order Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>