force-app/main/default/objects/WorkOrder/fields/Work_Type_always_requires_review__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_always_requires_review__c</fullName>
    <formula>WOLIs_need_review__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type always requires review</label>
    <type>Checkbox</type>
</CustomField>