force-app/main/default/objects/WorkOrder/recordTypes/MSN.recordType-meta.xml
<RecordType>
    <fullName>MSN</fullName>
    <active>true</active>
    <description>Please use this for all normal planned or reactive work (NOT reinstatement)</description>
    <label>MSN</label>
</RecordType>