force-app/main/default/objects/WorkOrder/recordTypes/MSN_Reinstatement_WorkOrder.recordType-meta.xml
<RecordType>
    <fullName>MSN_Reinstatement_WorkOrder</fullName>
    <active>true</active>
    <description>Used for Reinstatement Work Orders</description>
    <label>Reinstatement</label>
</RecordType>