force-app/main/default/objects/WorkOrder/validationRules/Status_cannot_be_changes_once_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_cannot_be_changes_once_completed</fullName>
    <active>true</active>
    <description>Creating a validation rule to stop the user from changing the status</description>
    <errorConditionFormula>IF(
ISPICKVAL(PRIORVALUE(Status),&apos;Completed&apos;) &amp;&amp; !ISPICKVAL(Status,&apos;Completed&apos;), 
True, 
False
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Cannot change the status once completed</errorMessage>
</ValidationRule>