force-app/main/default/objects/WorkOrder/listViews/Other_Planned_Work_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Other_Planned_Work_WorkOrder</fullName>
    <filterScope>Queue</filterScope>
    <label>Other Planned Work Queue</label>
    <queue>Other_Planned_Work_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>