force-app/main/default/objects/WorkOrder/listViews/Planned_Meter_Queue_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Planned_Meter_Queue_WorkOrder</fullName>
    <filterScope>Queue</filterScope>
    <label>Planned Meter Queue</label>
    <queue>Planned_Meter_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>