force-app/main/default/objects/WorkOrder/listViews/Reactive_Work_Queue_WorkOrder.listView-meta.xml
<ListView>
    <fullName>Reactive_Work_Queue_WorkOrder</fullName>
    <filterScope>Queue</filterScope>
    <label>Reactive Work Queue</label>
    <queue>Reactive_Work_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>