force-app/main/default/objects/WorkOrder/listViews/Reinstatement.listView-meta.xml
<ListView>
    <fullName>Reinstatement</fullName>
    <columns>Name</columns>
    <columns>WorkType</columns>
    <columns>Status</columns>
    <columns>MSN_Reinstatement_WorkSiteDetails__c</columns>
    <columns>MSN_Reinstatement_Notes__c</columns>
    <columns>MSN_Reinstatement_Surface_Length__c</columns>
    <columns>MSN_Reinstatement_Surface_Width__c</columns>
    <columns>MSN_Reinstatement_Surface_Depth__c</columns>
    <columns>MSN_Hard_Material_Volume__c</columns>
    <columns>MSN_Reintatement_BackfillRequired__c</columns>
    <columns>MSN_Reinstatement_LetterdropRequired__c</columns>
    <columns>Letter_drop_status__c</columns>
    <columns>MSN_Reinstatement_NoParkers__c</columns>
    <columns>MSN_TrafficControl_Required__c</columns>
    <columns>MSN_TrafficControl_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>WorkType</field>
        <operation>contains</operation>
        <value>Reinstatement</value>
    </filters>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>WorkOrder.MSN_Reinstatement_WorkOrder</value>
    </filters>
    <label>All Reinstatements</label>
</ListView>